--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
@@ -11,7 +12,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.eidorian.galappxy"
+        applicationId "com.eidorian.rawgapigames"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -73,4 +74,7 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 }
