--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.eidorian.rawgapigames.MainApplication"
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.eidorian.rawgapigames.presentation.ui.listgames.MainActivity">
+        <activity android:name=".presentation.ui.gamedetails.GameDetailsActivity"></activity>
+        <activity android:name=".presentation.ui.listgames.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
